# underwater-segmentation-transfer

./: README.md  app.py  compile_results.py  pyproject.toml  registry.py  requirements.txt
data_preparation/: convert_annotations.py  create_pooled_dataset.py  resize_dataset.py  resplit_by_chunks.py
evaluation/: cross_dataset_eval.py
pooled_data/coarse/: pooled_test_coarse.json
pooled_data/tc20/: pooled_test_tc20.json  pooled_val_tc20.json
results/: summary.json
results/eval/: pooled_coarse_on_sc_chunksplit_test.json  pooled_coarse_on_tc_chunksplit_test.json  pooled_tc20_on_sc_chunksplit_test.json  pooled_tc20_on_tc_chunksplit_test.json  sc_chunksplit+grayscale_on_sc_chunksplit_test.json  sc_chunksplit+grayscale_on_tc_chunksplit_test.json  (+18 more)
seaclear_data/: seaclear_480p_chunksplit_test.json  seaclear_480p_chunksplit_test_coarse.json  seaclear_480p_chunksplit_test_tc20.json  seaclear_480p_chunksplit_val.json  seaclear_480p_chunksplit_val_coarse.json  seaclear_480p_chunksplit_val_tc20.json  seaclear_480p_test.json  seaclear_480p_val.json
src/: __init__.py  augmentation.py  category_groups.py  checkpointing.py  dataset.py  evaluation.py  model.py  train.py  training_config.py
trashcan_data/: trashcan_chunksplit_test.json  trashcan_chunksplit_test_coarse.json  trashcan_chunksplit_test_tc20.json  trashcan_chunksplit_val.json  trashcan_chunksplit_val_coarse.json  trashcan_chunksplit_val_tc20.json  trashcan_test.json
tta/: add_text_overlay.py  compute_fda_spectrum.py
visualization/: visualize_cross_dataset.py  visualize_features.py
(+445 files in other folders)
