[project]
name = "erdos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "black",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "cython>=3.2.4",
    "dotenv>=0.9.9",
    "einops>=0.8.2",
    "fonttools>=4.61.1",
    "ipympl>=0.10.0",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "packaging>=26.0",
    "plotly>=6.6.0",
    "pycocotools>=2.0.11",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "setuptools==75.4.0",
    "six>=1.17.0",
    "streamlit>=1.55.0",
    "sympy>=1.14.0",
    "tqdm==4.40.2",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
torch = [
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
torchvision = [{ index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine != 'aarch64'" },]
